fixed extra white space for large screens

--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -3,9 +3,6 @@
     written here make sure to comment the file it belongs to.
 */
 
-/* 
-    Forms/(Login.js & Register.js)
-*/
 @media only screen and (min-width: 1450px) {
     .next-btn {
         right: 1% !important;
@@ -17,7 +14,7 @@
     #register {
         margin: 30px 28px !important;
     }
-    .playlist .annotations {
+    #waveform-playlist-container .playlist .annotations {
         letter-spacing: 0.7px !important;
         font-family: 'Open Sans' !important;
         height: 720px !important;
